# internal/api/collection/collection.go
@@ -5,16 +5,6 @@ import (
 	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
-// DownloadRequest 下载蓝图zip包
-type DownloadRequest struct {
-	mux.Meta `path:"/collection/:id/download" method:"GET"`
-	ID       primitive.ObjectID `path:"id"`
-}
-
-// DownloadResponse 下载蓝图zip包
-type DownloadResponse struct {
-}
-
 type Collection struct {
 	ID          primitive.ObjectID `json:"id"`
 	Title       string             `json:"title"`
@@ -24,7 +14,7 @@ type Collection struct {
 // SubCollectionRequest 查询子蓝图集
 type SubCollectionRequest struct {
 	mux.Meta `path:"/collection/:id/sub" method:"GET"`
-	ID       primitive.ObjectID `path:"id"`
+	ID       primitive.ObjectID `uri:"id"`
 }
 
 type SubCollectionResponse struct {
@@ -34,7 +24,7 @@ type SubCollectionResponse struct {
 // GetCollectionBlueprintRequest 查询蓝图
 type GetCollectionBlueprintRequest struct {
 	mux.Meta `path:"/collection/:id/blueprint" method:"GET"`
-	ID       primitive.ObjectID `path:"id"`
+	ID       primitive.ObjectID `uri:"id"`
 }
 
 type GetCollectionBlueprintItem struct {
@@ -51,11 +41,21 @@ type GetCollectionBlueprintResponse struct {
 
 type DetailRequest struct {
 	mux.Meta `path:"/collection/:id" method:"GET"`
-	ID       primitive.ObjectID `path:"id"`
+	ID       primitive.ObjectID `uri:"id"`
 }
 
 type DetailResponse struct {
 	ID          primitive.ObjectID `json:"id"`
 	Title       string             `json:"title"`
 	Description string             `json:"description"`
+	ParentID    primitive.ObjectID `json:"parent_id"`
+}
+
+// UpdateNotifyRequest 更新通知
+type UpdateNotifyRequest struct {
+	mux.Meta `path:"/collection/:id/notify" method:"PUT"`
+	ID       primitive.ObjectID `uri:"id"`
+}
+
+type UpdateNotifyResponse struct {
 }
